[tool.poetry]
name = "bintray-cleanup"
version = "0.1.0"
description = ""
authors = ["Zoltan Nagy <abesto@abesto.net>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.22"
pygments = "^2.4"
requests-cache = "^0.5.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
isort = "^4.3"
flake8 = "^3.7"
mypy = "^0.711.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
